Checked in foof and impact changes