@@ -4,6 +4,7 @@ import java.io.BufferedReader;
 import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.net.URL;
+import java.net.URI;
 
 public class Receiver extends Thread {
 	String url;
@@ -26,7 +27,7 @@ public class Receiver extends Thread {
 	}
 	public void run() {
 		try {
-			URL u = new URL(url);
+			URL u = URI.create(url).toURL();
 			while (!stop) {
 				InputStream is = u.openStream();
 				BufferedReader br = new BufferedReader(new InputStreamReader(is));
